removed inline css

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #eef6fb">
+  <body >
+<!--          style="background-color: #eef6fb"-->
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
